tests/src/Loader/classloader/generics/Instantiation/Negative/abstract06.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    class _generics_Instantiation_Negative_abstract06_abstract06_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract06_abstract06_cmd()
        {
            int rv = CoreClrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract06\\abstract06.cmd");
            Assert.Equal(rv, CoreClrTestWrapperLib.EXIT_SUCCESS_CODE);
        }
    }
}
